--- a/project1/index.html
+++ b/project1/index.html
@@ -47,7 +47,7 @@
 <!-- Gallery -->
 <h2 id="gallery">Gallery</h2>
 	<p>
-	<a src="/images/knit1.jpg">
+	<a href="images/knit1.jpg">
 		<figure>
 		<img src="images/tn_knit1.jpg" alt="Photograph of sock knitting on double pointed needles.">
 		</a>
@@ -56,7 +56,7 @@
 	</p>
 	
 	<p>	
-	<a src="/images/knit2.jpg">
+	<a href="images/knit2.jpg">
 		<figure>
 		<img src="images/tn_knit2.jpg" alt="Photograph of wooden colorful needles.">
 		</a>
@@ -64,7 +64,7 @@
 		</figure>
 	</p>
 	<p>
-		<a src="/images/knit3.jpg">
+		<a href="images/knit3.jpg">
 		<figure>
 		<img src="images/tn_knit3.jpg" alt="Photograph of balls of yarns in a pile.">
 		</a>
