--- a/project1/index.html
+++ b/project1/index.html
@@ -2,7 +2,7 @@
 	<html lang="en">
 		<head>
 			<meta charset="utf-8"/>
-			<titile>World of Knitting</title>
+			<title>World of Knitting</title>
 		</head>
 <body>		
 <!-- Main Heading and navigation -->
@@ -13,10 +13,10 @@
 	<p>Different types of yarns and needles may be used to achieve a plethora of knitted materials; these tools give the final piece a different colour, texture, weight, and/or integrity. Other factors that affect the end result include the needle's shape, thickness and malleability, as well as the yarn's fibre type, texture and twist.</p>
 
 <ul>
-	<li><a href="#knit_needles">Knitting Needles<a/></li> 
-	<li><a href="#yarn">Yarn<a/> </li>
-	<li><a href="#gallery">Gallery<a/></li>
-	<li><a href="#resource">Resources<a/></li>
+	<li><a href="#knit_needles">Knitting Needles</a></li> 
+	<li><a href="#yarn">Yarn</a> </li>
+	<li><a href="#gallery">Gallery</a></li>
+	<li><a href="#resource">Resources</a></li>
 </ul>
 
 <!-- Section 1 -->
@@ -46,42 +46,39 @@
 
 <!-- Gallery -->
 <h2 id="gallery">Gallery</h2>
-	<p>
-	<a href="images/knit1.jpg">
+	
 		<figure>
-		<img src="images/tn_knit1.jpg" alt="Photograph of sock knitting on double pointed needles.">
+		<a href="images/knit1.jpg">
+			<img src="images/tn_knit1.jpg" alt="Photograph of sock knitting on double pointed needles.">
 		</a>
 		<figcaption>Colorful variegated yarn being used on double pointed needles for socks. </figcaption>
 		</figure>
-	</p>
+		
 	
-	<p>	
-	<a href="images/knit2.jpg">
 		<figure>
-		<img src="images/tn_knit2.jpg" alt="Photograph of wooden colorful needles.">
+		<a href="images/knit2.jpg">
+			<img src="images/tn_knit2.jpg" alt="Photograph of wooden colorful needles.">
 		</a>
 		<figcaption>Colorful wooden knitting needles can provide inspiration.</figcaption>
 		</figure>
-	</p>
-	<p>
-		<a href="images/knit3.jpg">
+
+		
 		<figure>
-		<img src="images/tn_knit3.jpg" alt="Photograph of balls of yarns in a pile.">
+		<a href="images/knit3.jpg">
+			<img src="images/tn_knit3.jpg" alt="Photograph of balls of yarns in a pile.">
 		</a>
 		<figcaption>Balls of yarn in a pile.</figcaption>
 		</figure>
-	</p>
 
 <!-- Resource -->
 <h3 id="resource">Resource</h3>
-	<p>
+
 		<ol>
-			<li><a href="http://en.wikipedia.org/wiki/Knitting" target =_blank"> Wikipedia - Knitting</a></li>
+			<li><a href="http://en.wikipedia.org/wiki/Knitting" target ="_blank"> Wikipedia - Knitting</a></li>
 		  	<li> Photo Credit: <a href="https://www.flickr.com/photos/15274770@N02/2699372267/">lynnknits1</a> via <a href="http://compfight.com">Compfight</a> <a href="https://www.flickr.com/help/general/#147">cc</a></li>
 			<li>Photo Credit: <a href="https://www.flickr.com/photos/36179095@N02/8565345159/">saesnes</a> via <a href="http://compfight.com">Compfight</a> <a href="https://www.flickr.com/help/general/#147">cc</a></li>
 			<li>Photo Credit: <a href="https://www.flickr.com/photos/91223358@N00/261460434/">teresa c.</a> via <a href="http://compfight.com">Compfight</a> <a href="https://www.flickr.com/help/general/#147">cc</a></li>
 		</ol>
-	</p>
 
 
 	</body>
