Commit and Sync

--- a/project1/index.html
+++ b/project1/index.html
@@ -3,11 +3,13 @@
 		<head>
 			<meta charset="utf-8"/>
 			<title>World of Knitting</title>
+			<link href="css/styles.css" rel="stylesheet" />
 		</head>
 	<body>		
 		<!-- Main Heading and navigation -->
+	<div>
 		<h1 id="top">World of Knitting</h1>
-		<p>Knitting is a method by which thread or yarn is used to create a cloth.</p>
+		<p><strong>Knitting</strong> is a method by which thread or yarn is used to create a cloth.</p>
 		<p>Knitted fabric consists of a number of consecutive rows of loops, called stitches. As each row progresses, a new loop is pulled through an existing loop. The active stitches are held on a needle until another loop can be passed through them. This process eventually results in a fabric, often used for blankets or garments.</p>
 		<p>Knitting may be done by hand or by machine. There exist numerous styles and methods of hand knitting.</p>
 		<p>Different types of yarns and needles may be used to achieve a plethora of knitted materials; these tools give the final piece a different colour, texture, weight, and/or integrity. Other factors that affect the end result include the needle's shape, thickness and malleability, as well as the yarn's fibre type, texture and twist.</p>
@@ -21,7 +23,7 @@
 
 		<!-- Section 1 -->
 		<h2 id="knit_needles">Knitting Needles</h2>
-		<p>A knitting needle or knitting pin is a tool in hand-knitting to produce knitted fabrics. They generally have a long shaft and taper at their end, but they are not nearly as sharp as sewing needles. Their purpose is two-fold. The long shaft holds the active (unsecured) stitches of the fabric, to prevent them from unravelling, whereas the tapered ends are used to form new stitches. Most commonly, a new stitch is formed by inserting the tapered end through an active stitch, catching a loop (also called a bight) of fresh yarn and drawing it through the stitch; this secures the initial stitch and forms a new active stitch in its place. In specialized forms of knitting the needle may be passed between active stitches being held on another needle, or indeed between/through inactive stitches that have been knit previously.</p>
+		<p>A <em>knitting needle</em> or knitting pin is a tool in hand-knitting to produce knitted fabrics. They generally have a long shaft and taper at their end, but they are not nearly as sharp as sewing needles. Their purpose is two-fold. The long shaft holds the active (unsecured) stitches of the fabric, to prevent them from unravelling, whereas the tapered ends are used to form new stitches. Most commonly, a new stitch is formed by inserting the tapered end through an active stitch, catching a loop (also called a bight) of fresh yarn and drawing it through the stitch; this secures the initial stitch and forms a new active stitch in its place. In specialized forms of knitting the needle may be passed between active stitches being held on another needle, or indeed between/through inactive stitches that have been knit previously.</p>
 		<p>The size of a needle is described first by its diameter and secondly by its length. The size of the new stitch is determined in large part by the diameter of the knitting needle used to form it, because that affects the length of the yarn-loop drawn through the previous stitch. Thus, large stitches can be made with large needles, whereas fine knitting requires fine needles. In most cases, the knitting needles being used in hand-knitting are of the same diameter; however, in uneven knitting, needles of different sizes may be used. Larger stitches may also be made by wrapping the yarn more than once around the needles with every stitch. The length of a needle determines how many stitches it can hold at once; for example, very large projects such as a shawl with hundreds of stitches might require a longer needle than a small project such as a scarf or bootie. Various sizing systems for needles are in common use.</p>
 	
 		<h3>Single-pointed needles</h3>
@@ -35,7 +37,7 @@
 		<h3>Circular needles</h3>
 		<p>The first US patent for a circular needle was issued in 1918, although in Europe they may have been used a little earlier. Circulars are composed of two pointed, straight tips connected by a flexible cable and may be used for both knitting flat or knitting in the round. The two tapered ends, typically 4-5 inches (10.5-13 cm) long, are rigid, allowing for easy knitting, and are connected by the flexible strand (usually made of nylon or coated wire). The tips may be permanently connected to the cable and made in overall lengths from 9 inches (23 cm) to 60 inches (150 cm) or composed of cables and interchangeable tips. This allows various lengths and diameters to be combined into many different sizes of needles, allowing for a great variety of needs to be met by a relatively few component pieces. The ability to work from either end of one needle is convenient in several types of knitting, such as slip-stitch versions of double knitting.</p>
 		<p>In using circulars to knit flat pieces of fabric the two ends are used just as two separate needles would be. The knitter holds one tip in each hand and knits straight across the width of the fabric, turns the work, and knits or purls back the other way. Using circular needles has some advantages, for example, the weight of the fabric is more evenly distributed, therefore less taxing, on the arms and wrists of the knitter and, the length of the cable may be longer than would be practical with rigid needles since the cable and fabric rest in the lap of the knitter rather than extending straight out past the arms.</p>
-		<p>The lack of a purl row in stockinette stitch, since in the round (commonly referred to as ITR) knitting is all done using the knit stitch, is often perceived to be one of the greatest benefits of ITR. Knitting ITR with circulars is done in a spiral, the same way as using double-pointed needles (usually called DPNs). Additionally, circulars eliminate the need to continually switch from one needle to the next, and there is no possibility of stitches falling off the back end of the needles, as may happen when using DPNs. Much larger tubes may be knit ITR, too, helping items to be completed more quickly. Construction of garments such as sweaters may be greatly simplified when knitting ITR, since the finishing steps of sewing a back, two fronts, and two sleeves of a sweater together may be almost entirely eliminated in neck down ITR knitting.</p>
+		<p>The lack of a purl row in stockinette stitch, since in the round (commonly referred to as <abbr title="in the round">ITR</abbr>) knitting is all done using the knit stitch, is often perceived to be one of the greatest benefits of ITR. Knitting ITR with circulars is done in a spiral, the same way as using double-pointed needles (usually called DPNs). Additionally, circulars eliminate the need to continually switch from one needle to the next, and there is no possibility of stitches falling off the back end of the needles, as may happen when using DPNs. Much larger tubes may be knit ITR, too, helping items to be completed more quickly. Construction of garments such as sweaters may be greatly simplified when knitting ITR, since the finishing steps of sewing a back, two fronts, and two sleeves of a sweater together may be almost entirely eliminated in neck down ITR knitting.</p>
 		<p>Numerous techniques have been devised for the production of narrow tubular knitting on circular needles. One common method is to use two needles in place of the four or five double-pointed needles traditionally used, while a newer technique is to use one circular needle that is significantly longer than the circumference of the item being knitted. This technique is known as Magic Loop and has recently become a popular method of producing tubular knitting, as only one needle is required.</p>
 
 
@@ -80,6 +82,6 @@
 			<li>Photo Credit: <a href="https://www.flickr.com/photos/91223358@N00/261460434/">teresa c.</a> via <a href="http://compfight.com">Compfight</a> <a href="https://www.flickr.com/help/general/#147">cc</a></li>
 		</ol>
 
-
+		</div>
 	</body>
 </html>
