--- a/project1/index.html
+++ b/project1/index.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Title goes here</title>
+		<title>Crochet, A hobby</title>
 	</head>
 	<body>
-	<h1>h1 title goes here </h1>
+	<h1>Crochect, A hobby</h1>
 		<p>
 		<ul>
-			<li> text </i>
+			<li> Materials </i>
+			<li> Hooks </i>
+			<li> Yarn </i>
 		</ul>
+		
+		Crochet is a process of creating fabric from yarn, thread, or other material strands using a crochet hook.
+		The word is derived from the French word "crochet", meaning hook. Hooks can be made of materials such as metals, woods, or plastic and are commercially manufactured as well as produced by artisans. 
+		Crocheting, like knitting, consists of pulling loops of material through other loops, but additionally incorporates wrapping the working material around the hook one or more times. 
+		Crochet differs from knitting in that only one stitch is active at one time (exceptions being Tunisian crochet and broomstick lace), stitches made with the same diameter of yarn are comparably taller, and a single crochet hook is used instead of two knitting needles.
+		 Additionally, crochet has its own system of symbols to represent stitch types.
 		</p>
 	
-	<h2>h2 title goes here</h2>
+	<h2>Material</h2>
 	<p>
+	Basic materials required for crochet are a hook and some type of material that will be crocheted, most commonly yarn or thread. 
+	Additional tools are convenient for keeping stitches counted, measuring crocheted fabric, or making related accessories. 
+	Examples include cardboard cutouts, which can be used to make tassels, fringe, and many other items; 
+	a pom-pom circle, used to make pom-poms; a tape measure and a gauge measure, both used for measuring crocheted work and counting stitches; a row counter; and occasionally plastic rings, which are used for special projects.
+	In recent years, yarn selections have moved beyond synthetic and plant and animal-based fibers to include bamboo, qiviut, hemp, and banana stalks, to name a few.
 	</p>
 	
-	<h3>h3 title goes here </h3>
+	<h3>Hooks</h3>
 	<p>
 		<ol>
 			<li>text</li>
 		</ol>
 	</p>
 	
+	<h3>Yarn</h3>
+	<p>
+		<ol>
+			<li>text</li>
+		</ol>
+	</p>
 	
-	
-	
+		
 	</body>
 	
 </html>
