--- a/project1/index.html
+++ b/project1/index.html
@@ -20,27 +20,42 @@
 		</p>
 	
 	<h2>Material</h2>
-	<p>
-	Basic materials required for crochet are a hook and some type of material that will be crocheted, most commonly yarn or thread. 
-	Additional tools are convenient for keeping stitches counted, measuring crocheted fabric, or making related accessories. 
-	Examples include cardboard cutouts, which can be used to make tassels, fringe, and many other items; 
-	a pom-pom circle, used to make pom-poms; a tape measure and a gauge measure, both used for measuring crocheted work and counting stitches; a row counter; and occasionally plastic rings, which are used for special projects.
-	In recent years, yarn selections have moved beyond synthetic and plant and animal-based fibers to include bamboo, qiviut, hemp, and banana stalks, to name a few.
-	</p>
+		<p>
+		Basic materials required for crochet are a hook and some type of material that will be crocheted, most commonly yarn or thread. 
+		Additional tools are convenient for keeping stitches counted, measuring crocheted fabric, or making related accessories. 
+		Examples include cardboard cutouts, which can be used to make tassels, fringe, and many other items; 
+		a pom-pom circle, used to make pom-poms; a tape measure and a gauge measure, both used for measuring crocheted work and counting stitches; a row counter; and occasionally plastic rings, which are used for special projects.
+		In recent years, yarn selections have moved beyond synthetic and plant and animal-based fibers to include bamboo, qiviut, hemp, and banana stalks, to name a few.
+		</p>
 	
 	<h3>Hooks</h3>
-	<p>
-		<ol>
-			<li>text</li>
-		</ol>
-	</p>
+		<p>
+		The crochet hook comes in many sizes and materials, such as bone, bamboo, aluminium, plastic, and steel. 
+		Because sizing is categorized by the diameter of the hook's shaft, a crafter aims to create stitches of a certain size in order to reach a particular gauge specified in a given pattern. 
+		If gauge is not reached with one hook, another is used until the stitches made are the needed size. 
+		Crafters may have a preference for one type of hook material over another due to aesthetic appeal, yarn glide, or 
+		hand disorders such as arthritis, where bamboo or wood hooks are favored over metal for the perceived warmth and flexibility during use. 
+		Hook grips and ergonomic hook handles are also available to assist crafters.
+		</p>
+		<p>
+
+			<ol>
+				<li>Bone</li>
+				<li>Bamboo</li>
+				<li>Aluminium</li>
+				<li>Plastic</li>
+				<li>Steel</li>
+			</ol>
+		</p>
 	
 	<h3>Yarn</h3>
-	<p>
-		<ol>
-			<li>text</li>
-		</ol>
-	</p>
+		<p>
+		Yarn for crochet is usually sold as balls or skeins (hanks), although it may also be wound on spools or cones. 
+		Skeins and balls are generally sold with a yarn band, a label that describes the yarn's weight, length, dye lot, fiber content, washing instructions, suggested needle size, likely gauge, etc. 
+		It is a common practice to save the yarn band for future reference, especially if additional skeins must be purchased. Crocheters generally ensure that the yarn for a project comes from a single dye lot. 
+		The dye lot specifies a group of skeins that were dyed together and thus have precisely the same color; skeins from different dye lots, even if very similar in color, are usually slightly different and may produce a visible stripe when added onto existing work. 
+		If insufficient yarn of a single dye lot is bought to complete a project, additional skeins of the same dye lot can sometimes be obtained from other yarn stores or online.
+		</p>
 	
 		
 	</body>
