--- a/project1/index.html
+++ b/project1/index.html
@@ -4,12 +4,12 @@
 		<title>Crochet, A hobby</title>
 	</head>
 	<body>
-	<h1>Crochect, A hobby</h1>
+	<h1>Crochet, A hobby</h1>
 		<p>
 		<ul>
-			<li> Materials </i>
-			<li> Hooks </i>
-			<li> Yarn </i>
+			<li><a href="#material"> Materials </a></i>
+			<li><a href="#hooks"> Hooks </a></i>
+			<li><a href="#yarn"> Yarn </a></i>
 		</ul>
 		
 		Crochet is a process of creating fabric from yarn, thread, or other material strands using a crochet hook.
@@ -19,7 +19,7 @@
 		 Additionally, crochet has its own system of symbols to represent stitch types.
 		</p>
 	
-	<h2>Material</h2>
+	<h2 id="material">Material</h2>
 		<p>
 		Basic materials required for crochet are a hook and some type of material that will be crocheted, most commonly yarn or thread. 
 		Additional tools are convenient for keeping stitches counted, measuring crocheted fabric, or making related accessories. 
@@ -28,7 +28,7 @@
 		In recent years, yarn selections have moved beyond synthetic and plant and animal-based fibers to include bamboo, qiviut, hemp, and banana stalks, to name a few.
 		</p>
 	
-	<h3>Hooks</h3>
+	<h3 id="hooks">Hooks</h3>
 		<p>
 		The crochet hook comes in many sizes and materials, such as bone, bamboo, aluminium, plastic, and steel. 
 		Because sizing is categorized by the diameter of the hook's shaft, a crafter aims to create stitches of a certain size in order to reach a particular gauge specified in a given pattern. 
@@ -48,7 +48,7 @@
 			</ol>
 		</p>
 	
-	<h3>Yarn</h3>
+	<h3 id="yarn">Yarn</h3>
 		<p>
 		Yarn for crochet is usually sold as balls or skeins (hanks), although it may also be wound on spools or cones. 
 		Skeins and balls are generally sold with a yarn band, a label that describes the yarn's weight, length, dye lot, fiber content, washing instructions, suggested needle size, likely gauge, etc. 
