--- a/project1/index.html
+++ b/project1/index.html
@@ -10,6 +10,7 @@
 			<li><a href="#material"> Materials </a></i>
 			<li><a href="#hooks"> Hooks </a></i>
 			<li><a href="#yarn"> Yarn </a></i>
+			<li><a href="#images"> Project Images </a></i>
 		</ul>
 		
 		Crochet is a process of creating fabric from yarn, thread, or other material strands using a crochet hook.
@@ -57,7 +58,32 @@
 		If insufficient yarn of a single dye lot is bought to complete a project, additional skeins of the same dye lot can sometimes be obtained from other yarn stores or online.
 		</p>
 	
+	<h3 id="images">Project Images</h3>
+		<p>
+		<figure>
+			<img src="images/CanCozie.jpg" alt="Crochet can cozy" width="100" height="100">
+			<br />
+			<figcaption>Crochet can cozy.</figcaption>
+		</figure>
+
+		<figure>
+			<img src="images/coasters.jpg" alt="Crochet cotton coasters" width="100" height="100">
+			<br />
+			<figcaption>Crochet cotton coasters.</figcaption>
 		
+		</figure>
+		
+		<figure>
+			<img src="images/headband.jpg" alt="Crochet cotton headbands" width="100" height="100">
+			<br />
+		<figcaption>Crochet cotton headbands.</figcaption>
+			
+		<figure>
+			<img src="images/peep_scarf.jpg" alt="Crochet peed scarf" width="100" height="100">
+			<br />
+		<figcaption>Crochet peep scarf.</figcaption>
+
+		</p>
 	</body>
 	
 </html>
