Found missing code

--- a/project1/index.html
+++ b/project1/index.html
@@ -76,11 +76,13 @@
 			<img src="images/headband.jpg" alt="Crochet cotton headbands" width="100" height="100">
 			<br />
 		<figcaption>Crochet cotton headbands.</figcaption>
+		</figure>
 			
 		<figure>
 			<img src="images/peep_scarf.jpg" alt="Crochet peed scarf" width="100" height="100">
 			<br />
 		<figcaption>Crochet peep scarf.</figcaption>
+		</figure>
 		</p>
 	</body>
 	
