--- a/project1/index.html
+++ b/project1/index.html
@@ -4,6 +4,7 @@
 		<title>Crochet, A hobby</title>
 	</head>
 	<body>
+	<!-- Main Heading and navigation -->
 	<h1>Crochet, A hobby</h1>
 		<p>
 		<ul>
@@ -20,6 +21,7 @@
 		 Additionally, crochet has its own system of symbols to represent stitch types.
 		</p>
 	
+	<!-- Sections -->
 	<h2 id="material">Material</h2>
 		<p>
 		Basic materials required for crochet are a hook and some type of material that will be crocheted, most commonly yarn or thread. 
@@ -34,7 +36,7 @@
 		The crochet hook comes in many sizes and materials, such as bone, bamboo, aluminium, plastic, and steel. 
 		Because sizing is categorized by the diameter of the hook's shaft, a crafter aims to create stitches of a certain size in order to reach a particular gauge specified in a given pattern. 
 		If gauge is not reached with one hook, another is used until the stitches made are the needed size. 
-		Crafters may have a preference for one type of hook material over another due to aesthetic appeal, yarn glide, or 
+		<em>Crafters</em> may have a preference for one type of hook material over another due to aesthetic appeal, yarn glide, or 
 		hand disorders such as arthritis, where bamboo or wood hooks are favored over metal for the perceived warmth and flexibility during use. 
 		Hook grips and ergonomic hook handles are also available to assist crafters.
 		</p>
@@ -55,35 +57,47 @@
 		Skeins and balls are generally sold with a yarn band, a label that describes the yarn's weight, length, dye lot, fiber content, washing instructions, suggested needle size, likely gauge, etc. 
 		It is a common practice to save the yarn band for future reference, especially if additional skeins must be purchased. Crocheters generally ensure that the yarn for a project comes from a single dye lot. 
 		The dye lot specifies a group of skeins that were dyed together and thus have precisely the same color; skeins from different dye lots, even if very similar in color, are usually slightly different and may produce a visible stripe when added onto existing work. 
-		If insufficient yarn of a single dye lot is bought to complete a project, additional skeins of the same dye lot can sometimes be obtained from other yarn stores or online.
+		<q>If insufficient yarn of a single dye lot is bought to complete a project, additional skeins of the same dye lot can sometimes be obtained from other yarn stores or online.</q>
 		</p>
 	
+<!-- Images -->
 	<h3 id="images">Project Images</h3>
 		<p>
 		<figure>
+			<a href="images/CanCozie.jpg">
 			<img src="images/CanCozie.jpg" alt="Crochet can cozy" width="100" height="100">
+			</a>
 			<br />
 			<figcaption>Crochet can cozy.</figcaption>
 		</figure>
 
 		<figure>
+			<a href="images/coasters.jpg'>
 			<img src="images/coasters.jpg" alt="Crochet cotton coasters" width="100" height="100">
+			</a>
 			<br />
 			<figcaption>Crochet cotton coasters.</figcaption>
 		</figure>
 		
 		<figure>
+			<a href="images/headband.jpg">
 			<img src="images/headband.jpg" alt="Crochet cotton headbands" width="100" height="100">
+			</a>
 			<br />
 		<figcaption>Crochet cotton headbands.</figcaption>
 		</figure>
 			
 		<figure>
+			<a href="images/peep_scarf.jpg">
 			<img src="images/peep_scarf.jpg" alt="Crochet peed scarf" width="100" height="100">
+			</a>
 			<br />
 		<figcaption>Crochet peep scarf.</figcaption>
 		</figure>
 		</p>
+	<p>
+	<a href="http://en.wikipedia.org/wiki/Crochet#Materials">Wikipedia content </a>
+	</p>
 	</body>
 	
 </html>
