--- a/project1/index.html
+++ b/project1/index.html
@@ -6,14 +6,14 @@
 	<body>
 	<!-- Main Heading and navigation -->
 	<h1>Crochet, A hobby</h1>
-		<p>
+
 		<ul>
-			<li><a href="#material"> Materials </a></i>
-			<li><a href="#hooks"> Hooks </a></i>
-			<li><a href="#yarn"> Yarn </a></i>
-			<li><a href="#images"> Project Images </a></i>
+			<li><a href="#material"> Materials </a></li>
+			<li><a href="#hooks"> Hooks </a></li>
+			<li><a href="#yarn"> Yarn </a></li>
+			<li><a href="#images"> Project Images </a></li>
 		</ul>
-		
+		<p>
 		Crochet is a process of creating fabric from yarn, thread, or other material strands using a crochet hook.
 		The word is derived from the French word "crochet", meaning hook. Hooks can be made of materials such as metals, woods, or plastic and are commercially manufactured as well as produced by artisans. 
 		Crocheting, like knitting, consists of pulling loops of material through other loops, but additionally incorporates wrapping the working material around the hook one or more times. 
