Completed all W3 Validation Error Changes

--- a/project1/index.html
+++ b/project1/index.html
@@ -40,8 +40,6 @@
 		hand disorders such as arthritis, where bamboo or wood hooks are favored over metal for the perceived warmth and flexibility during use. 
 		Hook grips and ergonomic hook handles are also available to assist crafters.
 		</p>
-		<p>
-
 			<ol>
 				<li>Bone</li>
 				<li>Bamboo</li>
@@ -49,8 +47,7 @@
 				<li>Plastic</li>
 				<li>Steel</li>
 			</ol>
-		</p>
-	
+				
 	<h3 id="yarn">Yarn</h3>
 		<p>
 		Yarn for crochet is usually sold as balls or skeins (hanks), although it may also be wound on spools or cones. 
@@ -62,7 +59,6 @@
 	
 <!-- Images -->
 	<h3 id="images">Project Images</h3>
-		<p>
 		<figure>
 			<a href="images/CanCozie.jpg">
 			<img src="images/CanCozie.jpg" alt="Crochet can cozy" width="100" height="100">
@@ -72,7 +68,7 @@
 		</figure>
 
 		<figure>
-			<a href="images/coasters.jpg'>
+			<a href="images/coasters.jpg">
 			<img src="images/coasters.jpg" alt="Crochet cotton coasters" width="100" height="100">
 			</a>
 			<br />
@@ -94,7 +90,7 @@
 			<br />
 		<figcaption>Crochet peep scarf.</figcaption>
 		</figure>
-		</p>
+
 	<p>
 	<a href="http://en.wikipedia.org/wiki/Crochet#Materials">Wikipedia content </a>
 	</p>
