--- a/project1/index.html
+++ b/project1/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Crochet, A hobby</title>
 	<link href="css/styles.css" rel="stylesheet" />
+	<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 	<!-- Main Heading and navigation -->
