--- a/project1/index.html
+++ b/project1/index.html
@@ -5,6 +5,7 @@
 	<link href="css/styles.css" rel="stylesheet" />
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 	</head>
+	<div class=wrapper>
 	<body>
 	<!-- Main Heading and navigation -->
 	<div id=main_column>
@@ -101,5 +102,5 @@
 	</p>
 	</div>
 	</body>
-	
+	</div>
 </html>
