--- a/project1/index.html
+++ b/project1/index.html
@@ -6,9 +6,8 @@
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-	<div id=wrapper>
+	<div>
 	<!-- Main Heading and navigation -->
-	<div id=main_column>
 	<h1>Crochet, A hobby</h1>
 
 	<ul>
@@ -24,7 +23,7 @@
 	Crochet differs from knitting in that only one stitch is active at one time (exceptions being Tunisian crochet and broomstick lace), stitches made with the same diameter of yarn are comparably taller, and a single crochet hook is used instead of two knitting needles.
 	 Additionally, crochet has its own system of symbols to represent stitch types.
 	</p>
-	</div>
+	
 	<!-- Sections -->
 	<div id=secondary>
 	<h2 id="material">Material</h2>
