--- a/project1/index.html
+++ b/project1/index.html
@@ -6,100 +6,90 @@
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-	<div>
-	<!-- Main Heading and navigation -->
-	<h1>Crochet, A hobby</h1>
+	<div class="wrapper">	
 
-	<ul>
-		<li><a href="#material"> Materials </a></li>
-		<li><a href="#hooks"> Hooks </a></li>
-		<li><a href="#yarn"> Yarn </a></li>
-		<li><a href="#images"> Project Images </a></li>
-	</ul>
-	<p>
-	Crochet is a process of creating fabric from yarn, thread, or other material strands using a crochet hook.
-	The word is derived from the French word "crochet", meaning hook. Hooks can be made of materials such as metals, woods, or plastic and are commercially manufactured as well as produced by artisans. 
-	Crocheting, like knitting, consists of pulling loops of material through other loops, but additionally incorporates wrapping the working material around the hook one or more times. 
-	Crochet differs from knitting in that only one stitch is active at one time (exceptions being Tunisian crochet and broomstick lace), stitches made with the same diameter of yarn are comparably taller, and a single crochet hook is used instead of two knitting needles.
-	 Additionally, crochet has its own system of symbols to represent stitch types.
-	</p>
+	<!-- Main Heading and navigation -->
+	<header><h1>Crochet, A hobby</h1> </header>
+
+	<nav>
+		<ul>
+			<li><a href="#material"> Materials </a></li>
+			<li><a href="#hooks"> Hooks </a></li>
+			<li><a href="#yarn"> Yarn </a></li>
+			<li><a href="#images"> Project Images </a></li>
+		</ul>
+	</nav>
+	
 	
 	<!-- Sections -->
-	<div id=secondary>
-	<h2 id="material">Material</h2>
-		<p>
-		Basic materials required for crochet are a hook and some type of material that will be crocheted, most commonly yarn or thread. 
-		Additional tools are convenient for keeping stitches counted, measuring crocheted fabric, or making related accessories. 
-		Examples include cardboard cutouts, which can be used to make tassels, fringe, and many other items; 
-		a pom-pom circle, used to make pom-poms; a tape measure and a gauge measure, both used for measuring crocheted work and counting stitches; a row counter; and occasionally plastic rings, which are used for special projects.
-		In recent years, yarn selections have moved beyond synthetic and plant and animal-based fibers to include bamboo, qiviut, hemp, and banana stalks, to name a few.
-		</p>
-	
-		<h3 id="hooks">Hooks</h3>
-		<p>
-		The crochet hook comes in many sizes and materials, such as bone, bamboo, aluminium, plastic, and steel. 
-		Because sizing is categorized by the diameter of the hook's shaft, a crafter aims to create stitches of a certain size in order to reach a particular gauge specified in a given pattern. 
-		If gauge is not reached with one hook, another is used until the stitches made are the needed size. 
-		<em>Crafters</em> may have a preference for one type of hook material over another due to aesthetic appeal, yarn glide, or 
-		hand disorders such as arthritis, where bamboo or wood hooks are favored over metal for the perceived warmth and flexibility during use. 
-		Hook grips and ergonomic hook handles are also available to assist crafters.
-		</p>
-			<ol>
-				<li>Bone</li>
-				<li>Bamboo</li>
-				<li>Aluminium</li>
-				<li>Plastic</li>
-				<li>Steel</li>
-			</ol>
-				
-		<h3 id="yarn">Yarn</h3>
-		<p>
-		Yarn for crochet is usually sold as balls or skeins (hanks), although it may also be wound on spools or cones. 
-		Skeins and balls are generally sold with a yarn band, a label that describes the yarn's weight, length, dye lot, fiber content, washing instructions, suggested needle size, likely gauge, etc. 
-		It is a common practice to save the yarn band for future reference, especially if additional skeins must be purchased. Crocheters generally ensure that the yarn for a project comes from a single dye lot. 
-		The dye lot specifies a group of skeins that were dyed together and thus have precisely the same color; skeins from different dye lots, even if very similar in color, are usually slightly different and may produce a visible stripe when added onto existing work. 
-		<q>If insufficient yarn of a single dye lot is bought to complete a project, additional skeins of the same dye lot can sometimes be obtained from other yarn stores or online.</q>
-		</p>
-	</div>
-<!-- Images -->
-	<div id=images_column>
-	<h3 id="images">Project Images</h3>
-	<figure>
-		<a href="images/CanCozie.jpg">
-		<img src="images/CanCozie.jpg" alt="Crochet can cozy" width="100" height="100">
-		</a>
-		<br />
-		<figcaption>Crochet can cozy.</figcaption>
-	</figure>
-
-	<figure>
-		<a href="images/coasters.jpg">
-		<img src="images/coasters.jpg" alt="Crochet cotton coasters" width="100" height="100">
-		</a>
-		<br />
-		<figcaption>Crochet cotton coasters.</figcaption>
-	</figure>
-	
-	<figure>
-		<a href="images/headband.jpg">
-		<img src="images/headband.jpg" alt="Crochet cotton headbands" width="100" height="100">
-		</a>
-		<br />
-	<figcaption>Crochet cotton headbands.</figcaption>
-	</figure>
+	<section>
+		<h2 id="material">Material</h2>
+			<p>
+			Basic materials required for crochet are a hook and some type of material that will be crocheted, most commonly yarn or thread. 
+			Additional tools are convenient for keeping stitches counted, measuring crocheted fabric, or making related accessories. 
 		
-	<figure>
-		<a href="images/peep_scarf.jpg">
-		<img src="images/peep_scarf.jpg" alt="Crochet peed scarf" width="100" height="100">
-		</a>
-		<br />
-	<figcaption>Crochet peep scarf.</figcaption>
-	</figure>
+			</p>
+	
+			<h3 id="hooks">Hooks</h3>
+			<p>
+			The crochet hook comes in many sizes and materials, such as bone, bamboo, aluminium, plastic, and steel. 
+			Because sizing is categorized by the diameter of the hook's shaft, a crafter aims to create stitches of a certain size in order to reach a particular gauge specified in a given pattern. 
+			If gauge is not reached with one hook, another is used until the stitches made are the needed size. 
 
-	<p>
+			</p>
+				<ol>
+					<li>Bone</li>
+					<li>Bamboo</li>
+					<li>Aluminium</li>
+					<li>Plastic</li>
+					<li>Steel</li>
+				</ol>
+				
+			<h3 id="yarn">Yarn</h3>
+			<p>
+			Yarn for crochet is usually sold as balls or skeins (hanks), although it may also be wound on spools or cones. 
+			Skeins and balls are generally sold with a yarn band, a label that describes the yarn's weight, length, dye lot, fiber content, washing instructions, suggested needle size, likely gauge, etc. 
+			It is a common practice to save the yarn band for future reference, especially if additional skeins must be purchased. Crocheters generally ensure that the yarn for a project comes from a single dye lot.
+			</p>
+	</section>
+<!-- Images -->
+		<aside>
+			<h2 id="images">Project Images</h2>
+			<figure>
+				<a href="images/CanCozie.jpg">
+				<img src="images/CanCozie.jpg" alt="Crochet can cozy" width="100" height="100">
+				</a>
+				<br />
+				<figcaption>Crochet can cozy.</figcaption>
+			</figure>
+
+			<figure>
+				<a href="images/coasters.jpg">
+				<img src="images/coasters.jpg" alt="Crochet cotton coasters" width="100" height="100">
+				</a>
+				<br />
+				<figcaption>Crochet cotton coasters.</figcaption>
+			</figure>
+	
+			<figure>
+				<a href="images/headband.jpg">
+				<img src="images/headband.jpg" alt="Crochet cotton headbands" width="100" height="100">
+				</a>
+				<br />
+			<figcaption>Crochet cotton headbands.</figcaption>
+			</figure>
+		
+			<figure>
+				<a href="images/peep_scarf.jpg">
+				<img src="images/peep_scarf.jpg" alt="Crochet peed scarf" width="100" height="100">
+				</a>
+				<br />
+			<figcaption>Crochet peep scarf.</figcaption>
+			</figure>
+		</aside>
+	<footer>
 	<a href="http://en.wikipedia.org/wiki/Crochet#Materials">Wikipedia content </a>
-	</p>
-	</div>
+	</footer>
 	</div>
 	</body>
 
