Added Table Properties
Also added some additional comments in css and index

--- a/project1/index.html
+++ b/project1/index.html
@@ -21,7 +21,7 @@
 	</nav>
 	
 	
-	<!-- Sections -->
+	<!-- Main Content -->
 	<section>
 		<h2 id="material">Material</h2>
 			<p>
@@ -44,6 +44,35 @@
 					<li>Plastic</li>
 					<li>Steel</li>
 				</ol>
+	
+	<!-- Table for Conversion -->
+		<h3 id="hooks">Hook Conversion Chart</h3>
+		<table>
+			<tr>
+				<th scope="col">US</th>
+				<th scope="col">Metric</th>
+			</tr>
+			<tr>
+				<td>B/1</td>
+				<td>2.25</td>
+			</tr>
+			<tr class="even">
+				<td>C/2</td>
+				<td>2.75</td>
+			</tr>
+			<tr>
+				<td>D/3</td>
+				<td>3.25</td>
+			</tr>
+			<tr class="even">
+				<td>E/4</td>
+				<td>3.5</td>
+			</tr>
+
+
+		</table>
+		
+		
 				
 			<h3 id="yarn">Yarn</h3>
 			<p>
@@ -51,8 +80,9 @@
 			Skeins and balls are generally sold with a yarn band, a label that describes the yarn's weight, length, dye lot, fiber content, washing instructions, suggested needle size, likely gauge, etc. 
 			It is a common practice to save the yarn band for future reference, especially if additional skeins must be purchased. Crocheters generally ensure that the yarn for a project comes from a single dye lot.
 			</p>
+		
 	</section>
-<!-- Images -->
+<!-- Gallery -->
 		<aside>
 			<h2 id="images">Project Images</h2>
 			<figure>
