--- a/DWS1-practical/index.html
+++ b/DWS1-practical/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>BusinessName</title>
-		<!-- link to stylesheet goes here -->
+		<link href="css/main.css" rel="stylesheet" />
 	</head>
 	<body>
 		<header>
